<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="aboutCourse"
            type="com.omarahmed.myassistant.data.models.CourseInfo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:background="@drawable/sheet_background">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/poppins"
            android:text="@string/about_the_course"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="@+id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/about"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/showName"
            style="@style/editTextBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:hint="@string/course_name"
            android:text="@{aboutCourse.courseName}"
            android:inputType="text"
            android:drawableStart="@drawable/ic_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about"
            android:autofillHints="" />

        <EditText
            android:id="@+id/showCode"
            style="@style/editTextBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_code"
            android:hint="@string/course_code"
            android:text="@{aboutCourse.courseCode}"
            android:inputType="text"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/showCredit"
            style="@style/editTextBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_time_info"
            android:hint="@string/credit_hours"
            android:text="@{aboutCourse.courseHours}"
            android:layout_marginTop="20dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showCode"
            android:autofillHints="" />

        <EditText
            android:id="@+id/showLecturer"
            style="@style/editTextBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lecturer"
            android:hint="@string/lecturer_name"
            android:text="@{aboutCourse.courseLecturer}"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showCredit"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showLecturer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>