<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_add_course"
        android:focusableInTouchMode="true"
        android:padding="0dp">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins"
                    android:text="@string/adding_a_new_assignment"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codeLayout"
                    style="@style/textInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_code"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/codeAssignment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/poppins"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/deadlineLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textInputStyle"
                    android:hint="@string/deadline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"
                        android:focusable="false"
                        android:ellipsize="end"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textInputStyle"
                    android:hint="@string/short_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"
                        android:ellipsize="end"
                        android:lines="5"
                        android:gravity="start|top" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins"
                        android:text="@string/notification"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchAssignment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/save_btn_bg"
                    android:fontFamily="@font/poppins"
                    android:enabled="false"
                    android:text="@string/add"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/poppins"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>