<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_add_course"
        android:focusableInTouchMode="true"
        android:padding="20dp">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins"
                    android:text="@string/adding_a_new_schedule"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textInputStyle"
                    android:hint="@string/course_name"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/poppins"
                        android:labelFor="@id/name"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/timeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fromLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/from"
                        android:textColorHint="@android:color/black"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:fontFamily="@font/poppins" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/toLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:hint="@string/to"
                        android:textColorHint="@android:color/black"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:fontFamily="@font/poppins"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/venueLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textInputStyle"
                    android:hint="@string/venue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/venue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"
                        android:ellipsize="end"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/save_btn_bg"
                    android:fontFamily="@font/poppins"
                    android:enabled="false"
                    android:text="@string/add"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/cancel"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>